# Outfit-Recommendation-System-

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  start.bat  start.sh  vercel.json
api/: index.py
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py
backend/app/services/: ml_recommendation_engine.py  user_preference_learning.py  weather_pattern_analyzer.py
src/: App.js  avataaars.js  style.css
src/components/: Avatar.js  AvatarCustomizationModal.js  Forecast.js  Recommendations.js  WeatherHeader.js  WeatherIcon.js
src/services/: apiService.js  avatarOutfitMapper.js  mlRecommendationEngine.js  userPreferenceLearning.js  weatherPatternAnalyzer.js
src/styles/: commonStyles.js
src/utils/: clothingRecommendations.js  weatherUtils.js
