[project]
name = "outfit-recommendation-system"
version = "0.1.0"
description = "React frontend with FastAPI backend for weather-based outfit recommendations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.12.5",
  "python-dotenv==1.0.1",
  "httpx==0.28.1",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.13",
  "python-multipart==0.0.19",
]
